--- a/spec/fixtures/vcr_cassettes/pin_code_service_filter_with_multiple_pincodes.yml
+++ b/spec/fixtures/vcr_cassettes/pin_code_service_filter_with_multiple_pincodes.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://test.delhivery.com/c/api/pin-codes/json/?filter_codes=411008%2C411007%2C411006
+    uri: https://staging-express.delhivery.com/c/api/pin-codes/json/?filter_codes=411008%2C411007%2C411006
     body:
       encoding: US-ASCII
       string: ''
@@ -18,7 +18,7 @@ http_interactions:
   response:
     status:
       code: 200
-      message: 
+      message:
     headers:
       content-type:
       - application/json; charset=utf-8
@@ -47,6 +47,53 @@ http_interactions:
         {"district": "Pune", "pin": 411008, "max_amount": 0.0, "pre_paid": "Y", "cash":
         "Y", "pickup": "Y", "repl": "Y", "cod": "Y", "sort_code": "PNQ/PDP", "is_oda":
         "N", "state_code": "MH", "max_weight": 0.0}}]}'
-    http_version: 
+    http_version:
   recorded_at: Wed, 29 Mar 2017 06:00:57 GMT
+- request:
+    method: get
+    uri: https://staging-express.delhivery.com/c/api/pin-codes/json/?filter_codes=411008%2C411007%2C411006
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v1.10.0
+      Authorization:
+      - Token --api-key-here--
+      Accept:
+      - application/json
+      Content-type:
+      - application/json
+  response:
+    status:
+      code: 401
+      message:
+    headers:
+      date:
+      - Tue, 17 May 2022 15:01:26 GMT
+      content-type:
+      - text/html; charset=utf-8
+      transfer-encoding:
+      - chunked
+      connection:
+      - keep-alive
+      server:
+      - nginx
+      expires:
+      - Tue, 17 May 2022 15:01:26 GMT
+      vary:
+      - Authorization, Cookie
+      last-modified:
+      - Tue, 17 May 2022 15:01:26 GMT
+      cache-control:
+      - max-age=0
+      x-frame-options:
+      - SAMEORIGIN
+    body:
+      encoding: UTF-8
+      string: |-
+        There has been an error but we were asked to not let you see that.
+                                    Please contact the dev team.
+    http_version:
+  recorded_at: Tue, 17 May 2022 15:01:26 GMT
 recorded_with: VCR 3.0.3
