--- a/spec/fixtures/vcr_cassettes/waybill_service_bulk_fetch.yml
+++ b/spec/fixtures/vcr_cassettes/waybill_service_bulk_fetch.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://test.delhivery.com/waybill/api/bulk/json/?count=5
+    uri: https://staging-express.delhivery.com/waybill/api/bulk/json/?count=5
     body:
       encoding: US-ASCII
       string: ''
@@ -18,7 +18,7 @@ http_interactions:
   response:
     status:
       code: 200
-      message: 
+      message:
     headers:
       content-type:
       - application/json; charset=utf-8
@@ -39,6 +39,51 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '"3132110050050,3132110050046,3132110050035,3132110050024,3132110050013"'
-    http_version: 
+    http_version:
   recorded_at: Mon, 03 Apr 2017 06:01:04 GMT
+- request:
+    method: get
+    uri: https://staging-express.delhivery.com/waybill/api/bulk/json/?count=5
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v1.10.0
+      Authorization:
+      - Token --api-key-here--
+      Accept:
+      - application/json
+      Content-type:
+      - application/json
+  response:
+    status:
+      code: 400
+      message:
+    headers:
+      date:
+      - Tue, 17 May 2022 15:01:28 GMT
+      content-type:
+      - text/plain
+      transfer-encoding:
+      - chunked
+      connection:
+      - keep-alive
+      server:
+      - nginx
+      expires:
+      - Tue, 17 May 2022 15:01:28 GMT
+      vary:
+      - Authorization, Cookie
+      last-modified:
+      - Tue, 17 May 2022 15:01:28 GMT
+      cache-control:
+      - max-age=0
+      x-frame-options:
+      - SAMEORIGIN
+    body:
+      encoding: UTF-8
+      string: Bad Request! Missing cl in GET request for Waybill API action bulk
+    http_version:
+  recorded_at: Tue, 17 May 2022 15:01:28 GMT
 recorded_with: VCR 3.0.3
