--- a/spec/fixtures/vcr_cassettes/package_service_track_waybill.yml
+++ b/spec/fixtures/vcr_cassettes/package_service_track_waybill.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://test.delhivery.com/api/packages/json/?verbose=2&waybill=3132110000070
+    uri: https://staging-express.delhivery.com/api/packages/json/?verbose=2&waybill=3132110000070
     body:
       encoding: US-ASCII
       string: ''
@@ -18,7 +18,7 @@ http_interactions:
   response:
     status:
       code: 200
-      message: 
+      message:
     headers:
       content-type:
       - application/json; charset=utf-8
@@ -42,6 +42,53 @@ http_interactions:
         with error message- local variable ''client_dict'' referenced before assignment",
         "Success": false, "Error": "local variable ''client_dict'' referenced before
         assignment"}'
-    http_version: 
+    http_version:
   recorded_at: Mon, 03 Apr 2017 07:16:31 GMT
+- request:
+    method: get
+    uri: https://staging-express.delhivery.com/api/packages/json/?verbose=2&waybill=3132110000070%2C2
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v1.10.0
+      Authorization:
+      - Token --api-key-here--
+      Accept:
+      - application/json
+      Content-type:
+      - application/json
+  response:
+    status:
+      code: 401
+      message:
+    headers:
+      date:
+      - Tue, 17 May 2022 15:01:24 GMT
+      content-type:
+      - text/html; charset=utf-8
+      transfer-encoding:
+      - chunked
+      connection:
+      - keep-alive
+      server:
+      - nginx
+      expires:
+      - Tue, 17 May 2022 15:01:24 GMT
+      vary:
+      - Authorization, Cookie
+      last-modified:
+      - Tue, 17 May 2022 15:01:24 GMT
+      cache-control:
+      - max-age=0
+      x-frame-options:
+      - SAMEORIGIN
+    body:
+      encoding: UTF-8
+      string: |-
+        There has been an error but we were asked to not let you see that.
+                                    Please contact the dev team.
+    http_version:
+  recorded_at: Tue, 17 May 2022 15:01:24 GMT
 recorded_with: VCR 3.0.3
