--- a/spec/fixtures/vcr_cassettes/pickup_service_request_pickup.yml
+++ b/spec/fixtures/vcr_cassettes/pickup_service_request_pickup.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://test.delhivery.com/fm/request/new/
+    uri: https://staging-express.delhivery.com/fm/request/new/
     body:
       encoding: UTF-8
       string: '{"pickup_time":"16:30:00","pickup_date":"20170330","pickup_location":"AutomatedTestsWarehouse","expected_package_count":4}'
@@ -18,7 +18,7 @@ http_interactions:
   response:
     status:
       code: 201
-      message: 
+      message:
     headers:
       allow:
       - POST, OPTIONS
@@ -43,6 +43,57 @@ http_interactions:
       string: '{"pickup_id": 4363128, "client_name": "PROQUORE", "pickup_location_name":
         "AutomatedTestsWarehouse", "incoming_center_name": "HQ", "pickup_time": "16:30:00",
         "pickup_date": "2017-03-30", "expected_package_count": 4}'
-    http_version: 
+    http_version:
   recorded_at: Wed, 29 Mar 2017 06:59:06 GMT
+- request:
+    method: post
+    uri: https://staging-express.delhivery.com/fm/request/new/
+    body:
+      encoding: UTF-8
+      string: '{"pickup_time":"16:30:00","pickup_date":"20170330","pickup_location":"AutomatedTestsWarehouse","expected_package_count":4}'
+    headers:
+      User-Agent:
+      - Faraday v1.10.0
+      Authorization:
+      - Token --api-key-here--
+      Accept:
+      - application/json
+      Content-type:
+      - application/json
+  response:
+    status:
+      code: 401
+      message:
+    headers:
+      date:
+      - Tue, 17 May 2022 15:01:25 GMT
+      content-type:
+      - application/json
+      transfer-encoding:
+      - chunked
+      connection:
+      - keep-alive
+      server:
+      - nginx
+      expires:
+      - Tue, 17 May 2022 15:01:25 GMT
+      vary:
+      - Cookie
+      last-modified:
+      - Tue, 17 May 2022 15:01:25 GMT
+      allow:
+      - POST, OPTIONS
+      cache-control:
+      - max-age=0
+      x-frame-options:
+      - SAMEORIGIN
+      www-authenticate:
+      - Token
+    body:
+      encoding: UTF-8
+      string: |-
+        There has been an error but we were asked to not let you see that.
+                                    Please contact the dev team.
+    http_version:
+  recorded_at: Tue, 17 May 2022 15:01:25 GMT
 recorded_with: VCR 3.0.3
